jwt配置和跨域配置